--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link rel="shortcut icon" href="./SOLGIS.jpeg">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet-draw"></script>
     <script src="https://unpkg.com/leaflet-editable"></script>
-    <script src="https://unpkg.com/leaflet-measure/dist/leaflet-measure.js"></script>
     <script src="https://unpkg.com/leaflet-control-geocoder"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
+    <div id="search-bar"></div>
     <div id="map"></div>
 
     <div id="area-display">Area: <span id="area-value">0</span> square meters</div>
